# Automated-Story-Illustration

./: .gitignore  README.md  app.py  character-2.json  character.json  clip_evaluation_example.py  db_manager.py  img_gen.py  main.py  ptiToBin.py  pyproject.toml  requirements.txt
misc_files/: Running_locally_attempt.py  inspect_file_bytes.py  test_advanced_integration.py  train_config.yaml
src/: automated_sheet_handler.py  char_gen_pose_sheet.py  character_consistency_evaluator.py  character_generator-openai.py  clip_similarity_evaluator.py  cut_an_image copy 2.py  cut_an_image copy 3.py  cut_an_image copy 4.py  cut_an_image copy.py  cut_an_image.py  generation_history.py  image_generator.py  image_processor.py  main.py  model_trainer.py  pipeline_logger.py  s3_uploader.py  sheet_handler.py  upscaler.py  upscaler_SwinIR.py
tests/: __init__.py  test_image_cutting.py  test_model.py  test_training.py  test_upscaler.py
z_GPT_Templates/: Example_Char_descriptions.txt  GPT_Template_for_Action_Sheet_Gen.txt  GPT_Template_for_Emotion_Sheet_Gen.txt  GPT_Template_for_Sheet_Gen.txt  one_prompt.txt
