[project]
name = "automated-story-illustration"
version = "0.1.0"
description = ""
authors = [
    {name = "nb1622", email = "nb1622@ic.ac.uk"}
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
spacy = "*"
transformers = "*"
torch = "*" 
diffusers = "*"
datasets = "*"
jsonlines = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
